--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "tsnd --respawn src/index.ts",
     "build": "tsc",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "test": "mocha -r ts-node/register src/tests/*.test.ts"
   },
   "license": "ISC",
   "devDependencies": {
